--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: #f5f7fb;
+    background: #89a5dcff;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
 }
 
